--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
   "homepage": "https://github.com/suggestionsbot/suggestions#readme",
   "devDependencies": {
     "@types/common-tags": "^1.8.0",
-    "@types/dotenv-flow": "^3.1.0",
     "@types/giphy-api": "^2.0.2",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
@@ -88,11 +87,13 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@discordjs/collection": "^0.1.6",
+    "@types/dotenv": "^8.2.0",
     "bufferutil": "^4.0.1",
     "cachegoose": "^8.0.0",
     "common-tags": "^1.8.0",
     "dbots": "^5.0.4",
-    "dotenv-flow": "^3.2.0",
+    "dotenv": "^8.2.0",
     "eris": "^0.13.3",
     "eris-sharder": "^1.10.0",
     "erlpack": "^0.1.3",
