--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "declarationDir": "dist/types",
     "outDir": "dist/lib",
     "noEmitOnError": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src",
