--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "eris": "^0.13.3",
     "eris-sharder": "^1.10.0",
     "erlpack": "^0.1.3",
+    "frenchkiss": "^0.2.1",
     "giphy-api": "^2.0.1",
     "glob": "^7.1.6",
     "lodash": "^4.17.20",
