--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "homepage": "https://github.com/suggestionsbot/suggestions#readme",
   "devDependencies": {
+    "@types/async-redis": "^1.1.1",
     "@types/common-tags": "^1.8.0",
     "@types/giphy-api": "^2.0.2",
     "@types/glob": "^7.1.3",
@@ -89,6 +90,7 @@
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
     "@types/dotenv": "^8.2.0",
+    "async-redis": "^1.1.7",
     "bufferutil": "^4.0.1",
     "cachegoose": "^8.0.0",
     "common-tags": "^1.8.0",
