--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "yarn run build && node dist/lib/index.js",
+    "start": "yarn run build && node dist/lib/src/index.js",
     "build": "rimraf dist && tsc",
     "test": "jest --coverage --detectOpenHandles",
     "deploy": "yarn run lint && npm run test",
@@ -92,13 +92,12 @@
     "@types/dotenv": "^8.2.0",
     "async-redis": "^1.1.7",
     "bufferutil": "^4.0.1",
-    "cachegoose": "^8.0.0",
     "common-tags": "^1.8.0",
     "dbots": "^5.0.4",
     "dotenv": "^8.2.0",
     "eris": "^0.13.3",
     "eris-reactions": "^0.1.3",
-    "eris-sharder": "^1.10.0",
+    "eris-sharder": "discordware/eris-sharder#dev",
     "erlpack": "^0.1.3",
     "frenchkiss": "^0.2.1",
     "giphy-api": "^2.0.1",
