--- a/package.json
+++ b/package.json
@@ -97,11 +97,12 @@
     "dotenv": "^8.2.0",
     "eris": "^0.13.3",
     "eris-reactions": "^0.1.3",
-    "eris-sharder": "discordware/eris-sharder#dev",
+    "eris-sharder": "https://github.com/suggestionsbot/eris-sharder.git",
     "erlpack": "^0.1.3",
     "frenchkiss": "^0.2.1",
     "giphy-api": "^2.0.1",
     "glob": "^7.1.6",
+    "hastebin-gen": "^2.0.5",
     "lodash": "^4.17.20",
     "moment": "^2.28.0",
     "moment-duration-format": "^2.3.2",
