--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@types/async-redis": "^1.1.1",
     "@types/common-tags": "^1.8.0",
+    "@types/dotenv": "^8.2.0",
     "@types/giphy-api": "^2.0.2",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
@@ -73,7 +74,7 @@
     "@types/moment": "^2.13.0",
     "@types/moment-duration-format": "^2.2.2",
     "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.11.1",
+    "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
     "@types/redis": "^2.8.27",
     "@types/ws": "^7.2.6",
@@ -89,7 +90,9 @@
   },
   "dependencies": {
     "@discordjs/collection": "^0.1.6",
-    "@types/dotenv": "^8.2.0",
+    "@sentry/integrations": "^5.24.2",
+    "@sentry/node": "^5.24.2",
+    "@sentry/tracing": "^5.24.2",
     "async-redis": "^1.1.7",
     "bufferutil": "^4.0.1",
     "common-tags": "^1.8.0",
