--- a/package.json
+++ b/package.json
@@ -71,8 +71,6 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.161",
-    "@types/moment": "^2.13.0",
-    "@types/moment-duration-format": "^2.2.2",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
@@ -96,6 +94,7 @@
     "async-redis": "^1.1.7",
     "bufferutil": "^4.0.1",
     "common-tags": "^1.8.0",
+    "dayjs": "^1.9.1",
     "dbots": "^5.0.4",
     "dotenv": "^8.2.0",
     "eris": "^0.13.3",
@@ -107,9 +106,6 @@
     "glob": "^7.1.6",
     "hastebin-gen": "^2.0.5",
     "lodash": "^4.17.20",
-    "moment": "^2.28.0",
-    "moment-duration-format": "^2.3.2",
-    "moment-timezone": "^0.5.31",
     "mongoose": "^5.10.5",
     "node-fetch": "^2.6.1",
     "redis": "^3.0.2",
