--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "@types/giphy-api": "^2.0.2",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
-    "@types/lodash": "^4.14.161",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
@@ -87,7 +86,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
-    "@discordjs/collection": "^0.1.6",
+    "@augu/immutable": "^0.5.0",
     "@sentry/integrations": "^5.24.2",
     "@sentry/node": "^5.24.2",
     "@sentry/tracing": "^5.24.2",
@@ -105,10 +104,10 @@
     "giphy-api": "^2.0.1",
     "glob": "^7.1.6",
     "hastebin-gen": "^2.0.5",
-    "lodash": "^4.17.20",
     "mongoose": "^5.10.5",
     "node-fetch": "^2.6.1",
     "redis": "^3.0.2",
+    "wumpfetch": "^0.3.1",
     "zlib-sync": "^0.1.7"
   }
 }
