--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@anishshobith/deeptype": "^1.0.0",
     "@augu/immutable": "^0.5.0",
     "@sentry/integrations": "^5.24.2",
     "@sentry/node": "^5.24.2",
@@ -94,7 +95,7 @@
     "bufferutil": "^4.0.1",
     "common-tags": "^1.8.0",
     "dayjs": "^1.9.1",
-    "dbots": "^5.0.4",
+    "dbots": "^5.2.0",
     "dotenv": "^8.2.0",
     "eris": "^0.13.3",
     "eris-reactions": "^0.1.3",
