--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.14",
     "@types/mongoose": "^5.7.36",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.11.2",
     "@types/node-fetch": "^2.5.7",
     "@types/redis": "^2.8.27",
@@ -106,6 +107,7 @@
     "glob": "^7.1.6",
     "hastebin-gen": "^2.0.5",
     "mongoose": "^5.10.5",
+    "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "redis": "^3.0.2",
     "wumpfetch": "^0.3.1",
