--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "@typescript-eslint/explicit-function-return-type": ["warn", { "allowExpressions": true, "allowTypedFunctionExpressions": true }],
     "@typescript-eslint/no-non-null-assertion": ["off"],
     "@typescript-eslint/no-explicit-any": ["off"],
+    "@typescript-eslint/no-inferrable-types":  ["off"],
     "quotes": ["warn", "single"],
     "eol-last": ["error", "always"],
     "curly": ["off"]
