:wrench: Disable unused var rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "@typescript-eslint/no-non-null-assertion": ["off"],
     "@typescript-eslint/no-explicit-any": ["off"],
     "@typescript-eslint/no-inferrable-types":  ["off"],
+    "@typescript-eslint/no-unused-vars": ["off"],
     "quotes": ["warn", "single"],
     "eol-last": ["error", "always"],
     "curly": ["off"]
