--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "dayjs": "^1.9.1",
     "dbots": "^5.2.0",
     "dotenv": "^8.2.0",
-    "eris": "^0.13.3",
+    "eris": "https://github.com/suggestionsbot/eris.git#dev",
     "eris-reactions": "^0.1.3",
     "eris-sharder": "https://github.com/suggestionsbot/eris-sharder.git",
     "erlpack": "^0.1.3",
