:wrench: Ignore @typescript-eslint/no-empty-function

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "@typescript-eslint/no-explicit-any": ["off"],
     "@typescript-eslint/no-inferrable-types":  ["off"],
     "@typescript-eslint/no-unused-vars": ["off"],
+    "@typescript-eslint/no-empty-function": ["off"],
     "quotes": ["warn", "single"],
     "eol-last": ["error", "always"],
     "curly": ["off"]
