--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "discord",
     "bot"
   ],
-  "author": "acollierr17 <gamemaniac101@gmail.com>",
+  "author": "Anthony Collier <hello@acollier.dev>",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
