--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "dependencies": {
     "@anishshobith/deeptype": "^1.0.0",
     "@augu/immutable": "^0.6.0",
+    "@nedbot/sharder": "^0.0.7",
     "@sentry/integrations": "^6.0.0",
     "@sentry/node": "^6.0.0",
     "@sentry/tracing": "^6.0.0",
@@ -99,7 +100,6 @@
     "dotenv": "^8.2.0",
     "eris": "https://github.com/suggestionsbot/eris.git#dev",
     "eris-reactions": "^0.1.3",
-    "eris-sharder": "https://github.com/suggestionsbot/eris-sharder.git",
     "erlpack": "^0.1.3",
     "frenchkiss": "^0.2.1",
     "giphy-api": "^2.0.1",
